[tool.poetry]
name = "etekcity-ens-c551s"
version = "0.1.0"
description = "Reverse engineering project for Etekcity ENS-C551S smart kitchen scale"
authors = ["Zach Deibert <zachdeibert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
